--- a/doc/历程.md
+++ b/doc/历程.md
@@ -6,3 +6,10 @@
 - 函数`Raw()`:`以 application/octet-stream 方式上传单个文件`,修改为读取`url`中的文件名数据,来创建上传的文件
 - 引入了`Insomnia`作为`API`开发的辅助工具
 - 删除了不必要的全局变量
+
+## 2022-9-24
+
+- 完成了 `以二进制流文件方式上传单个文件` `以表单方式上传文件` 两个API
+- 将`OpenAPI`文档格式转换为`json`以提高逻辑关联性
+- 完成了 `以二进制流文件方式上传单个文件` `以表单方式上传文件` 两个`OpenAPI`文档
+- 将公告文件、目录操作函数写入了`mod`中,以降低代码复杂度
