--- a/doc/历程.md
+++ b/doc/历程.md
@@ -13,3 +13,7 @@
 - 将`OpenAPI`文档格式转换为`json`以提高逻辑关联性
 - 完成了 `以二进制流文件方式上传单个文件` `以表单方式上传文件` 两个`OpenAPI`文档
 - 将公告文件、目录操作函数写入了`mod`中,以降低代码复杂度
+
+## 2022-9-26
+
+- `上传字符串` 进行中
